# blogs-poc

./: README.md
Slipping through defender/: metasploit_windows_x64_decryption_stage.yar
Slipping through defender/Simple-Loader-Bypass-Static-Analysis/: CMakeLists.txt
Slipping through defender/Simple-Loader-Bypass-Static-Analysis/Source/: Main.c
Slipping through defender/Simple-Loader/Source/: Main.c
